<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_bmi_calc"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:gravity="center"
        android:hint="@string/enter_age"
        android:background="@color/amount_background"/>

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:gravity="center"
        android:hint="@string/enter_weight"
        android:background="@color/amount_background"/>

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:gravity="center"
        android:hint="@string/enter_height"
        android:background="@color/amount_background"/>

    <Button
        android:id="@+id/btn_calculate_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/bmi_result"
        android:background="@color/result_background"
        />

</GridLayout>